refactor: Apply the StandardCharSet constant instead of "UTF-8" string literal
- This remove the unnecessary catch `UnsupportedEncodingException` statement