@@ -1,7 +1,7 @@
 package net.thisptr.jackson.jq.internal.functions;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 import com.google.auto.service.AutoService;
 
@@ -21,16 +21,12 @@ import net.thisptr.jackson.jq.exception.JsonQueryException;
 public class AtUriFunction extends AbstractAtFormattingFunction {
 	@Override
 	public String convert(final String text) throws JsonQueryException {
-		try {
-			return URLEncoder.encode(text, "UTF-8")
-					.replaceAll("\\+", "%20")
-					.replaceAll("%21", "!")
-					.replaceAll("%27", "'")
-					.replaceAll("%28", "(")
-					.replaceAll("%29", ")")
-					.replaceAll("%7E", "~");
-		} catch (UnsupportedEncodingException e) {
-			throw new JsonQueryException(e);
-		}
-	}
+    return URLEncoder.encode(text, StandardCharsets.UTF_8)
+        .replaceAll("\\+", "%20")
+        .replaceAll("%21", "!")
+        .replaceAll("%27", "'")
+        .replaceAll("%28", "(")
+        .replaceAll("%29", ")")
+        .replaceAll("%7E", "~");
+  }
 }
